<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Parental Control (Launcher)</string>
    <string name="action_settings">Settings</string>
    <string name="widget_error">Error loading widget</string>
    <string name="widgets">Widgets</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="shortcut">Shortcut</string>
    <string name="enter_password">Enter password:</string>
    <string name="wrong_password">Incorrect password!</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="create_password">Create password</string>
    <string name="no_allowed_apps">There are no allowed apps</string>
    <string name="system_settings">System settings</string>
    <string name="resize">Resize</string>
    <string name="delete">Remove</string>
    <string name="width:">Width:</string>
    <string name="height:">Height:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="config_settings">Configure settings now?</string>
    <string name="select_launcher">Please select Parental Control as default launcher (select always if available)</string>

    <string-array name="empty_array" />
    <string-array name="animation_entries">
        <item>Slide</item>
        <item>Zoom out</item>
        <item>Stack</item>
        <item>Cube(inside)</item>
        <item>Cards</item>
        <item>Fade</item>
        <item>Rotation</item>
        <item>Horizontal rotation</item>
        <item>Shrink</item>
        <item>Scale</item>
        <item>Smooth scale</item>
    </string-array>
    <string-array name="animation_entry_values">
        <item>slide</item>
        <item>zoomOut</item>
        <item>stack</item>
        <item>cubeinside</item>
        <item>cards</item>
        <item>fade</item>
        <item>rotation</item>
        <item>hrotation</item>
        <item>shrink</item>
        <item>scale</item>
        <item>smoothscale</item>
    </string-array>
    
    <string-array name="pageind_entries">
        <item>None</item>
        <item>Line</item>
        <item>Circle</item>
    </string-array>
    <string-array name="pageind_entry_values">
        <item>none</item>
        <item>line</item>
        <item>circle</item>
    </string-array>
    
    <string-array name="orient_entries">
        <item>Auto</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="orient_entry_values">
        <item>auto</item>
        <item>portrait</item>
        <item>landscape</item>
    </string-array>
    
    <string-array name="dockback_entries">
        <item>None</item>
        <item>Glass</item>
    </string-array>
    <string-array name="dockback_values">
        <item>none</item>
        <item>glass</item>
    </string-array>
    
    <string-array name="loc_entries">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>5 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="loc_values">
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>18000000</item>
        <item>86400000</item>
    </string-array>

</resources>